[workspace]
resolver = "2"
members = [
  "crates/bundler",
  "crates/cli",
  "crates/core",
  "crates/crypto",
  "crates/network",
  "crates/rpc",
  "crates/storage",
  "crates/telemetry",
  "crates/types",
  "crates/utils",
  "crates/web-ui",
  "crates/zkvm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["json", "macros"] }
clap = { version = "4.6.0", features = ["derive"] }
config = "0.14.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = "0.4.3"
indicatif = "0.17.8"
k256 = { version = "0.13.4", features = ["ecdsa"] }
metrics = "0.22.0"
metrics-exporter-prometheus = "0.14.0"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
proptest = "1.5.0"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
sha3 = "0.10.8"
thiserror = "1.0.69"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
