[package]
name = "qevm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
serde_bytes = "0.11"

# PQC (ML-DSA / CRYSTALS-Dilithium)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# ECDSA (secp256k1)
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.6"

[profile.release]
lto = true
codegen-units = 1
