[package]
name = "qevm-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Cryptographic primitives for Q-EVM"

[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }
k256 = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
