[package]
name = "qevm-network"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Networking abstractions for Q-EVM"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
qevm-types = { path = "../types" }
