[package]
name = "qevm-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "RPC server for Q-EVM"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
qevm-core = { path = "../core" }
qevm-types = { path = "../types" }
qevm-utils = { path = "../utils" }
