[package]
name = "qevm-web-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Web UI for Q-EVM"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
qevm-core = { path = "../core" }
qevm-rpc = { path = "../rpc" }
qevm-telemetry = { path = "../telemetry" }
